force-app/main/default/objects/Recruitment_CRM__c/fields/Applydate__c.field-meta.xml
<CustomField>
    <fullName>Applydate__c</fullName>
    <label>Apply date</label>
    <type>Date</type>
</CustomField>