force-app/main/default/objects/Recruitment_CRM__c/fields/Candidate_status__c.field-meta.xml
<CustomField>
    <fullName>Candidate_status__c</fullName>
    <label>Candidate status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received Information</fullName>
                <default>true</default>
                <label>Received Information</label>
            </value>
            <value>
                <fullName>Waiting for interview</fullName>
            </value>
            <value>
                <fullName>Consider</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>