force-app/main/default/objects/Recruitment_CRM__c/fields/Currentaddress__c.field-meta.xml
<CustomField>
    <fullName>Currentaddress__c</fullName>
    <label>Current Address</label>
    <type>TextArea</type>
</CustomField>