force-app/main/default/objects/Recruitment_CRM__c/fields/Dateofbirth__c.field-meta.xml
<CustomField>
    <fullName>Dateofbirth__c</fullName>
    <label>Date of birth</label>
    <type>Date</type>
</CustomField>