force-app/main/default/objects/Recruitment_CRM__c/fields/Experienceinthisposition__c.field-meta.xml
<CustomField>
    <fullName>Experienceinthisposition__c</fullName>
    <inlineHelpText>Unit: Year</inlineHelpText>
    <label>Experience in this position</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>