force-app/main/default/objects/Recruitment_CRM__c/fields/Jobopening__c.field-meta.xml
<CustomField>
    <fullName>Jobopening__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Opening</label>
    <referenceTo>Job_Opening__c</referenceTo>
    <relationshipLabel>Recruitment CRM</relationshipLabel>
    <relationshipName>Recruitment_CRM</relationshipName>
    <type>Lookup</type>
</CustomField>