force-app/main/default/objects/Recruitment_CRM__c/fields/Recruitmentprocess__c.field-meta.xml
<CustomField>
    <fullName>Recruitmentprocess__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruitment Process</label>
    <referenceTo>Recruitment_Process__c</referenceTo>
    <relationshipLabel>Recruitment CRM</relationshipLabel>
    <relationshipName>Recruitment_CRM</relationshipName>
    <type>Lookup</type>
</CustomField>