force-app/main/default/objects/Recruitment_CRM__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Applydate__c</columns>
    <columns>Jobopening__c</columns>
    <columns>Candidatesource__c</columns>
    <columns>Dateofbirth__c</columns>
    <columns>Currentaddress__c</columns>
    <columns>Experienceinthisposition__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>